--- a/index.html
+++ b/index.html
@@ -5630,38 +5630,75 @@
 
       </div>
     </section>
-  </div>
+    </div>
 
-  <!--scrolltop top start-->
-  <div class="scrolltop float-right">
-    <i class="fa fa-arrow-up" onclick="topfunction()" id="myBtn"></i>
-  </div>
-  <!-- scrolltop top end-->
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!--scrolltop top start-->
+    <div class="scrolltop float-right">
+      <i class="fa fa-arrow-up" onclick="topfunction()" id="myBtn"></i>
+    </div>
+    <!-- scrolltop top end-->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-  <script src="js/all function.js"></script>
-  <script src="js/suggestion.js"></script>
+    <script src="js/all function.js"></script>
+    <script src="js/suggestion.js"></script>
 
-  <script>
-    const content = document.querySelector(".ecommerce_main_box_container");
-    const loader= document.querySelector(".skeleton_loader_section");
-    window.addEventListener("load",()=>{
-      loader.style.display ="none";
-      content.style.display ="block";
-    })
-  </script>
+    <script>
+      const content = document.querySelector(".ecommerce_main_box_container");
+      const loader = document.querySelector(".skeleton_loader_section");
+      window.addEventListener("load", () => {
+        loader.style.display = "none";
+        content.style.display = "block";
+      })
+    </script>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    <script>
+
+
+      // Add remove image using javascript
+
+      var res = window.matchMedia("(max-width: 992px)")
+
+      if (res.matches) {
+        for (let index1 = 0; index1 < 4; index1++) {
+          carousel_des_images = document.querySelector('.dcp');
+          carousel_des_images.remove();
+        }// remove desktop image element
+
+        for (let jndex1 = 0; jndex1 < 10; jndex1++) {
+          product_des_images = document.querySelector('.product-show-slider-main-center');
+          product_des_images.remove();
+        }// remove desktop image element
+
+      }
+      else {
+        for (let index2 = 0; index2 < 4; index2++) {
+          carousel_mo_images = document.querySelector('.mcp');
+          carousel_mo_images.remove();
+        }// remove desktop image element
+
+        for (let jndex2 = 0; jndex2 < 10; jndex2++) {
+          product_mo_images = document.querySelector('.main-div-2');
+          product_mo_images.remove();
+        }// remove desktop image element
+      }
+
+
+
+
+    </script>
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
