--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div>
 
           <input type="text" class="form-control comment-2" id="myInput" oninput="getsearchvalue()"
-            placeholder="Search">
+            placeholder="Search" autocomplete="off">
           <div class="can1">
 
             <svg focusable="false" onclick="clearsearch()" xmlns="http://www.w3.org/2000/svg" width="34" height="34"
