--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="header" id="topheader">
       <nav class="">
-        <div class="slide" id="">
+        <div class="slide" id="slide_box">
 
           <div class="l-navbar">
 
